--- a/style.css
+++ b/style.css
@@ -37,3 +37,13 @@ hr {
 main {
     margin: 80px 0;
   }
+
+.left {
+  max-width: 500px; 
+  float: left;
+}
+
+.right {
+  max-width: 500px; 
+  float:right;
+}
